fix mutli select overflow when tags wrap

--- a/components/Layout/Select/style.scss
+++ b/components/Layout/Select/style.scss
@@ -18,7 +18,6 @@
 }
 
 .select-container {
-  height: 50px;
   background-color: var(--surface-frame-bg);
   border-radius: 10px;
   position: relative;
@@ -30,11 +29,11 @@
   @include transition(standard);
 
   &.size-standard {
-    height: 50px;
+    min-height: 50px;
   }
 
   &.size-small {
-    height: 40px;
+    min-height: 40px;
   }
 
   &.disabled {
@@ -56,7 +55,6 @@
   }
 
   & > .inner-frame {
-    height: 100%;
     display: inline-grid;
     grid-template-columns: 1fr 22px;
     grid-template-rows: 1fr;
@@ -67,6 +65,7 @@
     column-gap: 8px;
     max-width: 100%;
     width: 100%;
+    min-height: inherit;
 
     & > .selected-option {
       grid-column: 1;
@@ -110,6 +109,10 @@
       align-content: center;
       justify-content: flex-start;
       box-sizing: border-box;
+
+      &.multi {
+        padding: 5px 0;
+      }
 
       & > .select-search {
         cursor: pointer;
